[package]
name = "game1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_rapier2d = { version = "0.19.0", features = [ "simd-stable", "debug-render" ] }
rand = "0.8.5"
leafwing-input-manager = "0.7.1"
bevy_prototype_lyon = "0.7.2"
bevy-inspector-egui = "0.16.5"
bevy_pkv = "0.6.0"
serde = "1.0.152"



# cargo build --release --target wasm32-unknown-unknown
# wasm-bindgen --out-dir ./out/ --target web ./target/wasm32-unknown-unknown/release/game1.wasm